# VaFRIC_warpper

./: CMakeLists.txt  README.md  package.xml
config/: VaFRIC.yaml
launch/: VaFRIC.launch  motion_stereo.launch  remode.launch  save2files.launch
src/: main.cpp  save2files.cpp  utils.h
src/VaFRIC/: VaFRIC.cpp  VaFRIC.h
